--- a/package.json
+++ b/package.json
@@ -23,16 +23,24 @@
   "dependencies": {
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/microservices": "^8.0.2",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/terminus": "^7.2.0",
+    "@nestjs/typeorm": "^8.0.1",
+    "@types/pino-http": "^5.4.2",
+    "amqp-connection-manager": "^3.2.2",
+    "amqplib": "^0.8.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "express-ctx": "^0.1.1",
+    "kafkajs": "^1.15.0",
     "mongodb": "^3.6.9",
     "mysql": "^2.18.1",
     "pino": "^6.11.3",
     "pino-http": "^5.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.2.0",
     "typeorm": "^0.2.34",
     "uuid": "^8.3.2"
   },
