MA add test cases and change folder structure

--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "amqplib": "^0.8.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "dotenv": "^10.0.0",
     "express-ctx": "^0.1.1",
     "kafkajs": "^1.15.0",
     "mongodb": "^3.6.9",
     "mysql": "^2.18.1",
+    "path": "^0.12.7",
     "pino": "^6.11.3",
     "pino-http": "^5.5.0",
     "reflect-metadata": "^0.1.13",
