--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/microservices": "^8.0.2",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/swagger": "^4.8.2",
     "@nestjs/terminus": "^7.2.0",
     "@nestjs/typeorm": "^8.0.1",
     "amqp-connection-manager": "^3.2.2",
@@ -41,6 +42,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "successive-nestjs-logger": "1.2.0",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.34"
   },
   "devDependencies": {
